--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,40 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="@string/kakao_scheme"
+                    android:host="@string/kakaolink_host" />
+            </intent-filter>
         </activity>
+        <activity android:name=".stage.Stage_0_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_1_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_2_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_3_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_4_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_5_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_6_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_7_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_8_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_9_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_10_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_11_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_12_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.Stage_13_Activity" android:screenOrientation="portrait"/>
+        <activity android:name=".stage.TearActivity" android:screenOrientation="portrait"/>
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="@string/kakao_api_key" />
+        <meta-data android:name="com.google.android.gms.games.APP_ID"
+            android:value="@string/app_id" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+
     </application>
 
 </manifest>
