--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:name=".util.GlobalApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
@@ -36,8 +36,6 @@
         <activity android:name=".stage.Stage_9_Activity" android:screenOrientation="portrait"/>
         <activity android:name=".stage.Stage_10_Activity" android:screenOrientation="portrait"/>
         <activity android:name=".stage.Stage_11_Activity" android:screenOrientation="portrait"/>
-        <activity android:name=".stage.Stage_12_Activity" android:screenOrientation="portrait"/>
-        <activity android:name=".stage.Stage_13_Activity" android:screenOrientation="portrait"/>
         <activity android:name=".stage.TearActivity" android:screenOrientation="portrait"/>
 
         <meta-data
